--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <nav>
             <a href="/"><span>WEB</span>STUDIO</a>
             <ul>
-                <li><a href=""></a>Studio</li>
-                <li><a href=""></a>Portfolio</li>
-                <li><a href=""></a>Contacts</li>
+                <li><a href="/">Studio</a></li>
+                <li><a href="/">Portfolio</a></li>
+                <li><a href="/">Contacts</a></li>
             </ul>
         </nav>
 
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
         </address>
     </header>
