--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="/"><span>WEB</span>STUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="/">Studio</a></li>
                 <li><a href="/">Portfolio</a></li>
@@ -20,8 +20,12 @@
         </nav>
 
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+
+
         </address>
     </header>
     <main>
@@ -31,6 +35,7 @@
         </section>
 
         <section> <!--SPISOK-->
+            <h2>Our Tasks</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -68,19 +73,28 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="./images/TeamCard1.jpg" alt="Mark Guerrero"></li>
-                <li><img src="./images/TeamCard2.jpg" alt="Tom Ford"></li>
-                <li><img src="./images/TeamCard3.jpg" alt="Camila Garcia"></li>
-                <li><img src="./images/TeamCard4.jpg" alt="Daniel Wilson"></li>
+                <li><img src="./images/img21.jpg" alt="Mark Guerrero" width="264"></li>
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+                <li><img src="./images/img22.jpg" alt="Mark Guerrero" width="264"></li>
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+                <li><img src="./images/img23.jpg" alt="Mark Guerrero" width="264"></li>
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+                <li><img src="./images/img24.jpg" alt="Mark Guerrero" width="264"></li>
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+
             </ul>
         </section>
-
     </main>
-
     <footer>
-        <a href="/"><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
+
+
 </body>
 
 </html>
