--- a/index.html
+++ b/index.html
@@ -73,19 +73,33 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="./images/img21.jpg" alt="Mark Guerrero" width="264"></li>
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-                <li><img src="./images/img22.jpg" alt="Mark Guerrero" width="264"></li>
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-                <li><img src="./images/img23.jpg" alt="Mark Guerrero" width="264"></li>
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-                <li><img src="./images/img24.jpg" alt="Mark Guerrero" width="264"></li>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <li>
+                    <img src="./images/img21.jpg" alt="Mark Guerrero" width="264">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
 
+
+                <li>
+                    <img src="./images/img22.jpg" alt="Mark Guerrero" width="264">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+
+                <li>
+                    <img src="./images/img23.jpg" alt="Mark Guerrero" width="264">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+
+                </li>
+
+
+
+                <li>
+                    <img src="./images/img24.jpg" alt="Mark Guerrero" width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
             </ul>
         </section>
     </main>
